--- a/DisenoWeb/MainPage.Master
+++ b/DisenoWeb/MainPage.Master
@@ -5,15 +5,60 @@
 <html>
 <head runat="server">
     <title></title>
+    <script src="dist/js.0d144ed3.js"></script>
+    <link rel="stylesheet" href="./dist/css.7f35712e.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./dist/js.07a25797.css">
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+       <header class="grid grid-cols-12 h-32 bg-orange">
+        <div class="py-4 col-span-2 col-start-2 flex items-center">
+            <h1><a class="brand text-decoration-none color-white" href="/index.html">Siberian</a></h1>
         </div>
-    </form>
+        <nav class="col-span-3 py-4 flex items-center">
+            <ul class="flex w-full my-auto text-center">
+                <div class="flex justify-center items-center">
+                    <li class="navigation-link py-2"><a class="text-decoration-none color-white"
+                            href="/product.html">product</a></li>
+                </div>
+                <div class="flex justify-center items-center">
+                    <li class="navigation-link">
+                        <div class="dropdown"> <a href="/categories.html"
+                                class="align-middle text-decoration-none color-white"> Categorias </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"> <a class="dropdown-item"
+                                    href="/feature.html">Feature</a> <a class="dropdown-item"
+                                    href="/feature.html">Another Action</a> </div>
+                        </div>
+                    </li>
+                </div>
+            </ul>
+        </nav>
+        <section class="py-4 col-span-4 flex items-center"> <input type="search" name="search" placeholder="Search.."
+                id="id"
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-2 px-4 mb-3 leading-tight focus:outline-none focus:bg-white">
+        </section>
+    </header>
+    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+
+    <footer class="container-fluid bg-blue color-white">
+        <div class="row py-6 mx-4">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-5 px-16">
+                <h4 class="text-2xl font-bold"> <a href="/contact-us.html"
+                        class="text-decoration-none color-white">Contactanos</a> </h4>
+                <p>Si tienes dudas o sugerencias ponte en contacto con nosotros a traves de nuestro correo.</p>
+                <p>support@siberian.com</p>
+            </div>
+            <div class="col-lg-4"> </div>
+            <div class="col-lg-2">
+                <h4 class="font-bold my-8"> Siguenos! </h4>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
