--- a/DisenoWeb/MainPage.Master
+++ b/DisenoWeb/MainPage.Master
@@ -5,33 +5,35 @@
 <html>
 <head runat="server">
     <title></title>
-    <script src="dist/js.0d144ed3.js"></script>
-    <link rel="stylesheet" href="./dist/css.7f35712e.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./dist/js.07a25797.css">
+        <link rel="stylesheet" href="dist/css.7f35712e.css">
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <script src="dist/js.0d144ed3.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="dist/js.07a25797.css">
+
+    
 </head>
 <body>
        <header class="grid grid-cols-12 h-32 bg-orange">
         <div class="py-4 col-span-2 col-start-2 flex items-center">
-            <h1><a class="brand text-decoration-none color-white" href="/index.html">Siberian</a></h1>
+            <h1><a class="brand text-decoration-none color-white" href="/index.aspx">Siberian</a></h1>
         </div>
         <nav class="col-span-3 py-4 flex items-center">
             <ul class="flex w-full my-auto text-center">
                 <div class="flex justify-center items-center">
                     <li class="navigation-link py-2"><a class="text-decoration-none color-white"
-                            href="/product.html">product</a></li>
+                            href="/product.aspx">Product</a></li>
                 </div>
                 <div class="flex justify-center items-center">
                     <li class="navigation-link">
-                        <div class="dropdown"> <a href="/categories.html"
+                        <div class="dropdown"> <a href="/categories.aspx"
                                 class="align-middle text-decoration-none color-white"> Categorias </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"> <a class="dropdown-item"
-                                    href="/feature.html">Feature</a> <a class="dropdown-item"
-                                    href="/feature.html">Another Action</a> </div>
+                                    href="/feature.aspx">Feature</a> <a class="dropdown-item"
+                                    href="/feature.aspx">Another Action</a> </div>
                         </div>
                     </li>
                 </div>
@@ -49,7 +51,7 @@
         <div class="row py-6 mx-4">
             <div class="col-lg-1"></div>
             <div class="col-lg-5 px-16">
-                <h4 class="text-2xl font-bold"> <a href="/contact-us.html"
+                <h4 class="text-2xl font-bold"> <a href="/contact-us.aspx"
                         class="text-decoration-none color-white">Contactanos</a> </h4>
                 <p>Si tienes dudas o sugerencias ponte en contacto con nosotros a traves de nuestro correo.</p>
                 <p>support@siberian.com</p>
